@@ -179,57 +179,334 @@ const { isConnected, send } = useWebSocket(socketUrl)
 const { isDarkMode, toggleDarkMode } = useDarkMode()
 ```
 
-## 🛠️ Setup and Installation
+## 🛠️ Installation & Setup
 
 ### Prerequisites
-- Node.js 18+
-- A modern browser with camera access permissions
-- Running backend server for AI pose detection
+- **Node.js 18+** - [Download from nodejs.org](https://nodejs.org/)
+- **npm** or **yarn** - Comes with Node.js
+- **Git** - [Download from git-scm.com](https://git-scm.com/)
+- **Modern browser** with camera access permissions (Chrome, Firefox, Safari, Edge)
+- **Running backend server** for AI pose detection
 
-### Development Setup
+### For Mobile Development (Optional)
+- **Android Studio** - [Download from developer.android.com](https://developer.android.com/studio)
+- **Java JDK 17+** - Required for Android development
+- **Android SDK** - Installed via Android Studio
+- **USB Debugging enabled** on your Android device
 
-1. **Install dependencies:**
+## 📦 Installation Instructions
+
+### 1. Clone the Repository
 ```bash
+git clone https://github.com/your-username/gymtasticint.git
+cd gymtasticint/frontend
+```
+
+### 2. Install Dependencies
+```bash
+# Using npm
 npm install
+
+# Or using yarn
+yarn install
 ```
 
-2. **Configure backend URL:**
-Create a `.env.local` file in the project root:
+### 3. Environment Configuration
+Create a `.env.local` file in the frontend root directory:
 ```env
-VITE_BACKEND_URL=your-backend-url:port
-```
-Default is `localhost:5000` if not specified.
+# Backend API Configuration
+VITE_BACKEND_URL=http://localhost:5000
+VITE_SOCKET_URL=ws://localhost:5000
 
-3. **Start development server:**
+# App Configuration
+VITE_APP_NAME=GymTastic AI Trainer
+VITE_APP_VERSION=1.0.0
+
+# Development Configuration
+VITE_DEBUG_MODE=true
+```
+
+### 4. Start Development Server
 ```bash
 npm run dev
 ```
+The application will be available at `http://localhost:3000`
 
-4. **Build for production:**
+## 🚀 Deployment Instructions
+
+### Web Deployment
+
+#### Option 1: Netlify Deployment
+1. **Build the application:**
 ```bash
 npm run build
 ```
 
-### Mobile App Setup
+2. **Deploy to Netlify:**
+```bash
+# Install Netlify CLI
+npm install -g netlify-cli
 
-1. **Build web assets:**
+# Login to Netlify
+netlify login
+
+# Deploy
+netlify deploy --prod --dir=dist
+```
+
+#### Option 2: Vercel Deployment
+1. **Install Vercel CLI:**
+```bash
+npm install -g vercel
+```
+
+2. **Deploy:**
+```bash
+vercel --prod
+```
+
+#### Option 3: Manual Deployment
+1. **Build for production:**
 ```bash
 npm run build
 ```
 
-2. **Sync with Capacitor:**
+2. **Upload the `dist` folder to your web server**
+
+#### Option 4: Docker Deployment
+1. **Create Dockerfile:**
+```dockerfile
+FROM node:18-alpine as build
+WORKDIR /app
+COPY package*.json ./
+RUN npm ci --only=production
+COPY . .
+RUN npm run build
+
+FROM nginx:alpine
+COPY --from=build /app/dist /usr/share/nginx/html
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
+```
+
+2. **Build and run Docker container:**
+```bash
+docker build -t gymtastic-frontend .
+docker run -p 80:80 gymtastic-frontend
+```
+
+### Environment Variables for Production
+Update your production environment variables:
+```env
+VITE_BACKEND_URL=https://your-backend-domain.com
+VITE_SOCKET_URL=wss://your-backend-domain.com
+VITE_DEBUG_MODE=false
+```
+
+## 📱 Mobile App Development
+
+### Initial Mobile Setup
+
+1. **Install Capacitor CLI:**
+```bash
+npm install -g @capacitor/cli
+```
+
+2. **Build web assets:**
+```bash
+npm run build
+```
+
+3. **Initialize Capacitor (if not already done):**
+```bash
+npx cap init
+```
+
+4. **Add Android platform:**
+```bash
+npx cap add android
+```
+
+5. **Sync project:**
 ```bash
 npx cap sync
 ```
 
-3. **Open in Android Studio:**
+### Android Development Setup
+
+1. **Install Android Studio and SDK:**
+   - Download and install Android Studio
+   - Install Android SDK (API level 24 or higher)
+   - Install Android SDK Build-Tools
+   - Set up Android emulator or connect physical device
+
+2. **Configure Android environment:**
+```bash
+# Add to your .bashrc or .zshrc
+export ANDROID_HOME=$HOME/Android/Sdk
+export PATH=$PATH:$ANDROID_HOME/emulator
+export PATH=$PATH:$ANDROID_HOME/tools
+export PATH=$PATH:$ANDROID_HOME/tools/bin
+export PATH=$PATH:$ANDROID_HOME/platform-tools
+```
+
+3. **Open project in Android Studio:**
 ```bash
 npx cap open android
 ```
 
-4. **Run on device:**
+## 📦 Build APK Instructions
+
+### Method 1: Using Android Studio (Recommended)
+
+1. **Prepare the build:**
 ```bash
-npx cap run android
+# Build web assets
+npm run build
+
+# Sync with Capacitor
+npx cap sync android
+
+# Open in Android Studio
+npx cap open android
+```
+
+2. **In Android Studio:**
+   - Wait for Gradle sync to complete
+   - Go to `Build` → `Generate Signed Bundle / APK`
+   - Choose `APK`
+   - Create a new keystore or use existing one
+   - Select build variant (`debug` or `release`)
+   - Click `Finish`
+
+3. **APK location:**
+   - Debug APK: `android/app/build/outputs/apk/debug/app-debug.apk`
+   - Release APK: `android/app/build/outputs/apk/release/app-release.apk`
+
+### Method 2: Command Line Build
+
+1. **Build debug APK:**
+```bash
+# Build web assets
+npm run build
+
+# Sync with Capacitor
+npx cap sync android
+
+# Build debug APK
+cd android
+./gradlew assembleDebug
+```
+
+2. **Build release APK:**
+```bash
+# Build web assets for production
+npm run build
+
+# Sync with Capacitor
+npx cap sync android
+
+# Build release APK (requires signing)
+cd android
+./gradlew assembleRelease
+```
+
+### Method 3: Automated Build Script
+
+Create a build script `build-apk.sh`:
+```bash
+#!/bin/bash
+
+echo "Building GymTastic APK..."
+
+# Clean previous builds
+echo "Cleaning previous builds..."
+rm -rf dist
+rm -rf android/app/build
+
+# Install dependencies
+echo "Installing dependencies..."
+npm install
+
+# Build web assets
+echo "Building web assets..."
+npm run build
+
+# Sync with Capacitor
+echo "Syncing with Capacitor..."
+npx cap sync android
+
+# Build APK
+echo "Building APK..."
+cd android
+./gradlew assembleDebug
+
+echo "APK built successfully!"
+echo "Location: android/app/build/outputs/apk/debug/app-debug.apk"
+```
+
+Make it executable and run:
+```bash
+chmod +x build-apk.sh
+./build-apk.sh
+```
+
+### Signing the APK for Production
+
+1. **Generate a keystore:**
+```bash
+keytool -genkey -v -keystore gymtastic-release-key.keystore -alias gymtastic -keyalg RSA -keysize 2048 -validity 10000
+```
+
+2. **Configure signing in `android/app/build.gradle`:**
+```gradle
+android {
+    ...
+    signingConfigs {
+        release {
+            keyAlias 'gymtastic'
+            keyPassword 'your-key-password'
+            storeFile file('gymtastic-release-key.keystore')
+            storePassword 'your-store-password'
+        }
+    }
+    buildTypes {
+        release {
+            signingConfig signingConfigs.release
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+}
+```
+
+3. **Build signed APK:**
+```bash
+cd android
+./gradlew assembleRelease
+```
+
+### APK Installation
+
+1. **Install on connected device:**
+```bash
+adb install android/app/build/outputs/apk/debug/app-debug.apk
+```
+
+2. **Or transfer APK to device and install manually**
+
+### Build Troubleshooting
+
+**Common Issues:**
+- **Gradle sync failed**: Check Android SDK installation and paths
+- **Build failed**: Ensure Java JDK 17+ is installed
+- **Signing errors**: Verify keystore path and passwords
+- **Out of memory**: Increase Gradle heap size in `gradle.properties`
+
+**Gradle heap size fix:**
+```properties
+# In android/gradle.properties
+org.gradle.jvmargs=-Xmx4096m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 ```
 
 ## 🎮 Usage Guide
